--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,15 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.GlamVibeClient" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimaryDark">@color/ivory</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="colorPrimary">@color/brown</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.GlamVibeClient" parent="Base.Theme.GlamVibeClient" />
+
+    <style name="BottomNavigationView">
+        <item name="fontFamily">@font/raleway</item>
+    </style>
 </resources>
