--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -6,15 +6,32 @@
     android:layout_height="match_parent"
     android:background="@color/ivory">
 
-    <ImageView
-        android:id="@+id/app_logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="50dp"
-        android:contentDescription="@string/app_logo_content_description"
+    <FrameLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="142dp"
+        android:background="@color/rose"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/avatar_circle_background"
+        android:layout_width="124dp"
+        android:layout_height="124dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/circle_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/app_logo"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:contentDescription="@string/app_logo_content_description"
+        app:layout_constraintEnd_toEndOf="@id/avatar_circle_background"
+        app:layout_constraintStart_toStartOf="@id/avatar_circle_background"
+        app:layout_constraintTop_toTopOf="@id/avatar_circle_background"
+        app:layout_constraintBottom_toBottomOf="@id/avatar_circle_background"
         app:srcCompat="@drawable/glam_vibe_logo" />
 
     <TextView
