--- a/app/src/main/res/layout/fragment_catalog_masters.xml
+++ b/app/src/main/res/layout/fragment_catalog_masters.xml
@@ -5,28 +5,12 @@
     android:layout_height="match_parent"
     android:background="@color/ivory">
 
-    <TextView
-        android:id="@+id/masters_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/raleway"
-        android:paddingStart="16dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="8dp"
-        android:text="@string/title_masters_list"
-        android:textAlignment="center"
-        android:textColor="@color/brown"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_of_masters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/masters_title"
+        app:layout_constraintTop_toTopOf="parent"
         app:spanCount="2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
