--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="brown">#FF675553</color>
-    <color name="ivory">#FFEDE8E2</color>
+    <color name="ivory">#EDEBE2</color>
     <color name="mauve">#FFB47377</color>
     <color name="champagne">#FFEAD5C4</color>
     <color name="rose">#FFD3A5A5</color>
