--- a/app/src/main/res/layout/fragment_service_information.xml
+++ b/app/src/main/res/layout/fragment_service_information.xml
@@ -58,6 +58,7 @@
             android:contentDescription="@string/service_favourite_content_description"
             app:icon="@drawable/baseline_favorite_border_24"
             app:iconTint="@color/mauve"
+            app:iconSize="@dimen/icon_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
