Добавлен каталог мастеров

--- a/app/src/main/res/layout/card_service.xml
+++ b/app/src/main/res/layout/card_service.xml
@@ -27,7 +27,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/empty_image"
-            tools:ignore="ImageContrastCheck" />
+            tools:ignore="ImageContrastCheck"
+            />
 
         <ImageView
             android:id="@+id/promotion"
