--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,14 @@
         <item name="android:fontFamily">@font/raleway</item>
         <item name="android:textColor">@color/ivory</item>
     </style>
+
+    <style name="MenuTextAppearance" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:fontFamily">@font/raleway</item>
+    </style>
+
+    <style name="PopupMenu" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:popupBackground">@color/ivory</item>
+        <item name="android:itemTextAppearance">@style/MenuTextAppearance</item>
+    </style>
 </resources>
