--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,9 @@
         <item name="android:popupBackground">@color/ivory</item>
         <item name="android:itemTextAppearance">@style/MenuTextAppearance</item>
     </style>
+
+    <style name="DatePicker" parent="Theme.MaterialComponents.Light">
+        <item name="colorAccent">@color/mauve</item>
+        <item name="android:textColorPrimary">@color/brown</item>
+    </style>
 </resources>
